Update a country name.
* gettext-tools/doc/ISO_3166: Use "Eswatini" instead of "Swaziland".
* gettext-tools/doc/iso-3166.texi: Likewise.

--- a/gettext-tools/doc/iso-3166.texi
+++ b/gettext-tools/doc/iso-3166.texi
@@ -423,7 +423,7 @@ Sint Maarten (Dutch part).
 @item SY
 Syrian Arab Republic.
 @item SZ
-Swaziland.
+Eswatini.
 @item TC
 Turks and Caicos Islands.
 @item TD
