gettext.m4: Recognize the shared GNU libintl on MSVC.
Reported by Kirill Makurin <maiddaisuki@outlook.com>
in <https://lists.gnu.org/archive/html/bug-m4/2025-06/msg00000.html>.

* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT): On MSVC, don't try to use
_nl_msg_cat_cntr.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ Version 0.26 - July 2025
       in a context that requires a format string.  You can override this
       heuristic by using a comment of the form /* xgettext: c-format */.
 
+# Bug fixes:
+  - The AM_GNU_GETTEXT macro now recognizes, on MSVC, the GNU libintl built
+    as a shared library.
+
 Version 0.25 - May 2025
 
 # Programming languages support:
