--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -1829,7 +1829,9 @@ Likewise for the GCC sources, see @ref{gcc-internal-format}.
 @kwindex gfc-internal-format@r{ flag}
 @itemx no-gfc-internal-format
 @kwindex no-gfc-internal-format@r{ flag}
-Likewise for the GNU Fortran Compiler sources, see @ref{gfc-internal-format}.
+Likewise for the GNU Fortran Compiler sources up to GCC 14.x,
+see @ref{gfc-internal-format}.
+These flags are deprecated.
 
 @item ycp-format
 @kwindex ycp-format@r{ flag}
@@ -10466,7 +10468,8 @@ various other types of compiler-internal objects,
 @subsection GFC internal Format Strings
 
 These format strings are used inside the GNU Fortran Compiler sources,
-that is, the Fortran frontend in the GCC sources.  In such a format
+that is, the Fortran frontend in the GCC sources, up to GCC 14.x.
+In such a format
 string, a directive starts with @samp{%} and is finished by a
 specifier: @samp{%} denotes a literal percent sign, @samp{C} denotes the
 current source location, @samp{L} denotes a source location, @samp{c}
