Add support for Shell printf format strings, part 3.
* gettext-tools/src/format-invalid.h (INVALID_FLAG_FOR): New macro.
* gettext-tools/src/format-java-printf.c (INVALID_FLAG_FOR): Remove macro.
* gettext-tools/src/format-sh-printf.c (format_parse): Reject format strings
with invalid flag+specifier combinations.
* gettext-tools/tests/format-sh-printf-1: Add more test cases.
* gettext-tools/doc/gettext.texi (sh-format): Mention the ' flag.

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -10266,6 +10266,9 @@ but without the obsolescent @code{b} conversion specifier.
 Extensions by the GNU coreutils @samp{printf} command
 (@url{https://www.gnu.org/software/coreutils/manual/html_node/printf-invocation.html})
 are not supported:
+use of the @samp{'} flag in the
+@code{%i}, @code{%d}, @code{%u}, @code{%f}, @code{%F}, @code{%g}, @code{%G}
+directives;
 use of @samp{*} or @samp{*@var{m}$} as width or precision;
 use of size specifiers @code{h}, @code{l}, @code{j}, @code{z}, @code{t} (ignored);
 and the escape sequences @code{\c},
