Python: Update python-brace-format, assuming Python >= 3.1.
* gettext-tools/src/format-python-brace.c (struct toplevel_counters): New type.
(parse_directive): Take a 'struct toplevel_counters *' parameter. Allow empty
argument names at the top-level. But reject format strings with both absolute
argument numbers and unnamed arguments at the top-level.
(parse_upto): Take a 'struct toplevel_counters *' parameter.
(format_parse): Pass a 'struct toplevel_counters *' to parse_upto.
* gettext-tools/tests/format-python-brace-1: Update.
* gettext-tools/tests/format-python-brace-2: Add another test case.
* gettext-tools/doc/lang-python.texi: Add more examples of formatting with
positions.

--- a/gettext-tools/doc/lang-python.texi
+++ b/gettext-tools/doc/lang-python.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2025 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node Python
@@ -52,7 +52,9 @@ emulate
 
 @item Formatting with positions
 @code{'...%(ident)d...' % @{ 'ident': value @}}
-@*@code{'...@{ident@}...'.format(ident=value)} (see PEP 3101)
+@*@code{'...@{ident@}...'.format(ident=value)}
+@*@code{'...@{0@}...@{1@}...'.format(value0,value1)}
+@*@code{'...@{@}...@{@}...'.format(value0,value1)}
 
 @item Portability
 fully portable
