--- a/gettext-runtime/doc/rt-gettext.texi
+++ b/gettext-runtime/doc/rt-gettext.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2025 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @pindex gettext
@@ -13,7 +13,7 @@ gettext [@var{option}] -s [@var{msgid}]...
 The @code{gettext} program displays the native language translation of a
 textual message.
 
-@noindent @strong{Arguments}
+@noindent @strong{Options and arguments}
 
 @table @samp
 @item -c @var{context}
@@ -43,25 +43,30 @@ interpreted like the System V @samp{echo} program did.
 This option is only for compatibility with the @samp{echo} program or shell
 built-in.  It has no effect.
 
+@item -n
+@opindex -n@r{, @code{gettext} option}
+This option has only an effect if the @code{-s} option is given.  It
+suppresses the additional newline at the end.
+
+@item [@var{textdomain}] @var{msgid}
+Retrieve translated message corresponding to @var{msgid} from @var{textdomain}.
+
+@end table
+
+@noindent @strong{Informative output}
+
+@table @samp
 @item -h
 @itemx --help
 @opindex -h@r{, @code{gettext} option}
 @opindex --help@r{, @code{gettext} option}
 Display this help and exit.
 
-@item -n
-@opindex -n@r{, @code{gettext} option}
-This option has only an effect if the @code{-s} option is given.  It
-suppresses the additional newline at the end.
-
 @item -V
 @itemx --version
 @opindex -V@r{, @code{gettext} option}
 @opindex --version@r{, @code{gettext} option}
 Output version information and exit.
-
-@item [@var{textdomain}] @var{msgid}
-Retrieve translated message corresponding to @var{msgid} from @var{textdomain}.
 
 @end table
 
